# Alien-Wallpaper

./: .env  .gitignore  .pre-commit-config.yaml  .pylintrc  .ruby-gemset  Gemfile  LICENSE.txt  README.md  _com.alienwallpaper.alienwallpaper.plist  alien_cron.sh.example  alien_downloader.rb  alien_multi.rb  alien_wallpaper  alien_wallpaper.py  alien_wallpaper.rb  install_helper.py  pyproject.toml  pytest.ini  tasks.py  tests.py  wallpaper.job.plist
.github/workflows/: automerge.yml  codeql-analysis.yml  main.yml
alien-wallpaper/: pyproject.toml
alien-wallpaper/tests/: test_alien_wallpaper.py
alien_wallpaper/: __init__.py  __main__.py  console.py  daemon.py  image_downloader.py  run.py  settings.py
tests/: conftest.py  test_alien_wallpaper.py  test_codebase.py  test_console.py  test_daemon.py
tools/ci/: install_poetry.sh
tools/launchd/: launchd_config.example.toml  setup_launchd_agent.py
tools/scripts/: install_launchd_agent.py
