[tool.poetry]
name = "alien-wallpaper"
version = "1.0.0"
description = "Download images from Reddit."
authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.761"
pylint = "^2.4.4"
invoke = "^1.4.0"
pre-commit = "^1.21.0"
isort = {version = "^4.3.21", extras = ["pyproject"]}
praw = "^6.5.1"

[tool.poetry.scripts]
alien_wallpaper = "alien_wallpaper.console:main"

[tool.black]
target_version = ["py38"]

[tool.isort]
include_trailing_comma = true
known_first_party = ["alien_wallpaper"]
known_third_party = ["praw", "pytest", "toml"]
line_length = 88
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
