[tool.poetry]
name = "alien-wallpaper"
version = "1.0.0"
description = "Download images from Reddit."
authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.00"
mypy = "^0.942"
pylint = "^2.13.7"
invoke = "^1.7.0"
pre-commit = "^2.18.1"
isort = "^5.10.1"
praw = "^7.5.0"

[tool.poetry.scripts]
alien_wallpaper = "alien_wallpaper.console:main"

[tool.black]
target_version = ["py310"]

[tool.isort]
profile = "black"
known_first_party = ["alien_wallpaper"]
known_third_party = ["praw", "pytest", "toml"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
